cambios agregamos sitio de twich

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <p>
-        hola estudiantes este es mi sitio web :D
+        hola amigos y amigas  este es mi sitio web :D preguntame en vivo en mi twich.tv/stigmaz
+        
     </p>
 </body>
 </html>
